// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTableHierarchy should generate nodes and hierarchy correctly 1`] = `
Object {
  "belongsCell": undefined,
  "children": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]area",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "area",
      "level": 0,
      "padding": 0,
      "query": Object {
        "area": "area",
      },
      "rowIndex": 1,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "area",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "province",
      "height": 0,
      "id": "root[&]province",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "province",
      "label": "province",
      "level": 0,
      "padding": 0,
      "query": Object {
        "province": "province",
      },
      "rowIndex": 2,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "province",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "city",
      "height": 0,
      "id": "root[&]city",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "city",
      "label": "city",
      "level": 0,
      "padding": 0,
      "query": Object {
        "city": "city",
      },
      "rowIndex": 3,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "city",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "type",
      "height": 0,
      "id": "root[&]type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "type",
      "label": "type",
      "level": 0,
      "padding": 0,
      "query": Object {
        "type": "type",
      },
      "rowIndex": 4,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "sub_type",
      "height": 0,
      "id": "root[&]sub_type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "sub_type",
      "label": "sub_type",
      "level": 0,
      "padding": 0,
      "query": Object {
        "sub_type": "sub_type",
      },
      "rowIndex": 5,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "sub_type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "profit",
      "height": 0,
      "id": "root[&]profit",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "profit",
      "label": "profit",
      "level": 0,
      "padding": 0,
      "query": Object {
        "profit": "profit",
      },
      "rowIndex": 6,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "profit",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "count",
      "height": 0,
      "id": "root[&]count",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "count",
      "label": "count",
      "level": 0,
      "padding": 0,
      "query": Object {
        "count": "count",
      },
      "rowIndex": 7,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "count",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "colIndex": -1,
  "field": undefined,
  "height": 0,
  "id": "root",
  "inCollapseNode": undefined,
  "isCollapsed": undefined,
  "isGrandTotals": undefined,
  "isLeaf": undefined,
  "isPivotMode": undefined,
  "isSubTotals": undefined,
  "isTotalMeasure": undefined,
  "isTotals": undefined,
  "key": "",
  "label": "",
  "level": undefined,
  "padding": 0,
  "query": undefined,
  "rowIndex": undefined,
  "seriesNumberWidth": undefined,
  "toJSON": [Function],
  "value": "",
  "width": 0,
  "x": 0,
  "y": 0,
}
`;

exports[`buildTableHierarchy should generate nodes and hierarchy correctly 2`] = `
Hierarchy {
  "allNodesWithoutRoot": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]area",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "area",
      "level": 0,
      "padding": 0,
      "query": Object {
        "area": "area",
      },
      "rowIndex": 1,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "area",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "province",
      "height": 0,
      "id": "root[&]province",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "province",
      "label": "province",
      "level": 0,
      "padding": 0,
      "query": Object {
        "province": "province",
      },
      "rowIndex": 2,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "province",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "city",
      "height": 0,
      "id": "root[&]city",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "city",
      "label": "city",
      "level": 0,
      "padding": 0,
      "query": Object {
        "city": "city",
      },
      "rowIndex": 3,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "city",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "type",
      "height": 0,
      "id": "root[&]type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "type",
      "label": "type",
      "level": 0,
      "padding": 0,
      "query": Object {
        "type": "type",
      },
      "rowIndex": 4,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "sub_type",
      "height": 0,
      "id": "root[&]sub_type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "sub_type",
      "label": "sub_type",
      "level": 0,
      "padding": 0,
      "query": Object {
        "sub_type": "sub_type",
      },
      "rowIndex": 5,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "sub_type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "profit",
      "height": 0,
      "id": "root[&]profit",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "profit",
      "label": "profit",
      "level": 0,
      "padding": 0,
      "query": Object {
        "profit": "profit",
      },
      "rowIndex": 6,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "profit",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "count",
      "height": 0,
      "id": "root[&]count",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "count",
      "label": "count",
      "level": 0,
      "padding": 0,
      "query": Object {
        "count": "count",
      },
      "rowIndex": 7,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "count",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "height": 0,
  "indexNode": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "area",
      "height": 0,
      "id": "root[&]area",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "area",
      "label": "area",
      "level": 0,
      "padding": 0,
      "query": Object {
        "area": "area",
      },
      "rowIndex": 1,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "area",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "province",
      "height": 0,
      "id": "root[&]province",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "province",
      "label": "province",
      "level": 0,
      "padding": 0,
      "query": Object {
        "province": "province",
      },
      "rowIndex": 2,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "province",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "city",
      "height": 0,
      "id": "root[&]city",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "city",
      "label": "city",
      "level": 0,
      "padding": 0,
      "query": Object {
        "city": "city",
      },
      "rowIndex": 3,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "city",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "type",
      "height": 0,
      "id": "root[&]type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "type",
      "label": "type",
      "level": 0,
      "padding": 0,
      "query": Object {
        "type": "type",
      },
      "rowIndex": 4,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "sub_type",
      "height": 0,
      "id": "root[&]sub_type",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "sub_type",
      "label": "sub_type",
      "level": 0,
      "padding": 0,
      "query": Object {
        "sub_type": "sub_type",
      },
      "rowIndex": 5,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "sub_type",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "profit",
      "height": 0,
      "id": "root[&]profit",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "profit",
      "label": "profit",
      "level": 0,
      "padding": 0,
      "query": Object {
        "profit": "profit",
      },
      "rowIndex": 6,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "profit",
      "width": 0,
      "x": 0,
      "y": 0,
    },
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "count",
      "height": 0,
      "id": "root[&]count",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "count",
      "label": "count",
      "level": 0,
      "padding": 0,
      "query": Object {
        "count": "count",
      },
      "rowIndex": 7,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "count",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "maxLevel": 0,
  "sampleNodeForLastLevel": Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "field": "$$series_number$$",
    "height": 0,
    "id": "root[&]序号",
    "inCollapseNode": undefined,
    "isCollapsed": false,
    "isGrandTotals": false,
    "isLeaf": true,
    "isPivotMode": undefined,
    "isSubTotals": false,
    "isTotalMeasure": false,
    "isTotals": false,
    "key": "$$series_number$$",
    "label": "序号",
    "level": 0,
    "padding": 0,
    "query": Object {
      "$$series_number$$": "序号",
    },
    "rowIndex": 0,
    "seriesNumberWidth": undefined,
    "toJSON": [Function],
    "value": "序号",
    "width": 0,
    "x": 0,
    "y": 0,
  },
  "sampleNodesForAllLevels": Array [
    Object {
      "belongsCell": undefined,
      "children": Array [],
      "colIndex": -1,
      "field": "$$series_number$$",
      "height": 0,
      "id": "root[&]序号",
      "inCollapseNode": undefined,
      "isCollapsed": false,
      "isGrandTotals": false,
      "isLeaf": true,
      "isPivotMode": undefined,
      "isSubTotals": false,
      "isTotalMeasure": false,
      "isTotals": false,
      "key": "$$series_number$$",
      "label": "序号",
      "level": 0,
      "padding": 0,
      "query": Object {
        "$$series_number$$": "序号",
      },
      "rowIndex": 0,
      "seriesNumberWidth": undefined,
      "toJSON": [Function],
      "value": "序号",
      "width": 0,
      "x": 0,
      "y": 0,
    },
  ],
  "width": 0,
}
`;
